--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 nav{
     display:flex;
     justify-content: space-around;
-    background-color: rgb(3,3,29);
+    background-color:#000066;
     color:white;
     height:100px;
     align-items:center;
@@ -29,7 +29,7 @@ nav{
 }
 .searchbar button{
     width:80px;
-    background-color:orange;
+    background-color:#ffa31a;
     border:none;
     color:white;
     font-weight:semi-bold;
